# Dj_GymBoost

./: .gitignore  Dockerfile  Procfile  behave.ini  docker-compose.yml  heroku.yml  pyproject.toml
accounts/: tests.py
accounts/migrations/: 0001_initial.py
api/: serializers.py  urls.py  views.py
api/tests/: test_endpoints.py  test_views.py
exercises/: forms.py  models.py  tests.py  urls.py  views.py
exercises/migrations/: 0001_initial.py
exercises/tests/: factory.py  test_forms.py  test_models.py  test_views.py
features/: add_workout_exercises.feature  create-exercise.feature  create_exercise.feature  create_workout.feature  delete_workout.feature  delete_workout_exercise.feature  environment.py  view_workout_list.feature
features/steps/: add_workout_exercise.py  create_exercise.py  create_workout.py  delete_workout.py  delete_workout_exercise.py  view_workout_list.py
functional_tests/: helpers.py
functional_tests/features/: create_exercise.feature  create_workout_exercise_set.feature  delete_exercise.feature  delete_workout_exercise.feature  delete_workout_exercise_set.feature  navigation_header.feature
functional_tests/steps/: add_workout_exercise.py  create_exercise.py  create_workout_exercise_set.py  delete_exercise.py  delete_workout_exercise.py  delete_workout_exercise_set.py  given.py  navigation_header.py  then.py  view_workout_list.py  when.py
routines/: forms.py  models.py  urls.py  views.py
templates/: base.html  home.html
web_project/: settings.py  urls.py
workouts/: forms.py  models.py  tests.py  urls.py  views.py
(+55 files in other folders)
