[tool.poetry]
name = "dj_gymboost"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
psycopg2-binary = "^2.9.3"
environs = {version = "8.0.0", extras = ["django"]}
whitenoise = "^6.2.0"
gunicorn = "20.0.4"
behave-django = "^1.4.0"
selenium = "^4.4.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
